--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,13 @@
 }
 .token {
   height: 80vh;
-  background-color: #ffc903;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
   url("images/man_car.jpg");
 }
 
 .token .block {
-  background-color: #604328;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7), #604328);
+
   height: 80%;
   width: 90%;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 0px 2px,
